# meta-openenv-hack

./: CLAUDE.md  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
crispr_env/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
crispr_env/server/: Dockerfile  app.py  environment.py
ids_env/: __init__.py  client.py  openenv.yaml  pyproject.toml  requirements.txt
ids_env/server/: Dockerfile  app.py  environment.py
server/: app.py  environment.py
